cert-manager/prod/prod-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressrule
  namespace: demo-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - example.com
    secretName: app-production-certificate
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: app
              servicePort: 8080
